# QEMU-eBPF-Sandbox

./: .gitattributes  .gitignore  Makefile  README.md
eBPF_basic_design/: Makefile  README.md  vmlinux.h
eBPF_basic_design/cgroup_egress/: cgroup_egress.c
eBPF_basic_design/logging/: log_utils.c  log_utils.h
eBPF_basic_design/socket_filter/: socket_filter.c
eBPF_basic_design/syscall_trace/: syscall_trace.bpf.c  syscall_trace.c
eBPF_basic_design/xdp_drop/: xdp_drop.bpf.c  xdp_drop.c
eBPF_boost_asio_design/: CMakeLists.txt  README.md
eBPF_boost_asio_design/action/: ActionLoop.cpp  ActionLoop.hpp
eBPF_boost_asio_design/actions/: LogAction.cpp  LogAction.hpp  main.cpp
eBPF_boost_asio_design/cgroup_egress/: main.cpp
eBPF_boost_asio_design/coroutine/: async_mutex.hpp
eBPF_boost_asio_design/log_action/: LogAction.hpp
eBPF_boost_asio_design/socket_filter/: main.cpp
eBPF_boost_asio_design/syscall_trace/: main.cpp
eBPF_boost_asio_design/xdp_drop/: main.cpp
eBPF_oop_design/: CMakeLists.txt  README.md
eBPF_oop_design/action/: ActionLoop.cpp  ActionLoop.hpp
eBPF_oop_design/actions/: ActionLoop.cpp  LogAction.hpp  main.cpp
eBPF_oop_design/bpf/: BpfProgram.cpp  BpfProgram.hpp
eBPF_oop_design/cgroup_egress/: cgroup_egress.bpf.c  cgroup_egress.cpp  cgroup_egress.hpp  main.cpp
eBPF_oop_design/coroutine/: async_mutex.hpp  fire_forget.hpp  task.hpp
eBPF_oop_design/ebpf/: BpfProgram.cpp  BpfProgram.hpp
eBPF_oop_design/log_action/: LogAction.cpp  LogAction.hpp
eBPF_oop_design/socket_filter/: main.cpp  socket_filter.bpf.c  socket_filter.cpp  socket_filter.hpp
eBPF_oop_design/syscall_trace/: main.cpp  syscall_trace.cpp  syscall_trace.hpp
eBPF_oop_design/xdp_drop/: main.cpp  xdp_drop.bpf.c  xdp_drop.cpp  xdp_drop.hpp
guest/: init
scripts/: build-kernel.sh  build-rootfs.sh  run-qemu.sh  run_eBPF_basic_design.sh  setup.sh  test.sh
